Bug 500009 - Long filename tooltips open in a window instead of tooltip
Summary: Long filename tooltips open in a window instead of tooltip
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 497249 502466 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-13 17:00 UTC by kostadinshishmanov
Modified: 2025-04-14 16:52 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
complete output from strace (2.81 MB, text/plain)
2025-02-13 17:00 UTC, kostadinshishmanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kostadinshishmanov 2025-02-13 17:00:15 UTC
Created attachment 178302 [details]
complete output from strace

SUMMARY

Sometimes, when I hover over the text of a file with a really long name, the full name of the file appears in a new window which briefly opens, and then closes. 

Issue is not 100% reproducible

Video showing the issue: https://www.youtube.com/watch?v=vLU6SG-cZDQ

STEPS TO REPRODUCE
1. Have a file with a really long name
2. Hover over the file's name 
3. Full name might appear in a new window

OBSERVED RESULT

The file's full name sometimes briefly appears in a new window which closes after a split second

EXPECTED RESULT

The file's full name should always appears in a small popup beside the cursor.

SOFTWARE/OS VERSIONS
Operating System: Gentoo Linux 2.17
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Kernel Version: 6.6.75-gentoo (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 30.9 GiB of RAM
Graphics Processor: AMD Radeon RX 6800
Comment 1 Akseli Lahtinen 2025-02-25 17:00:41 UTC
Can confirm this happens sometimes. For me it happens pretty often.

I just had to set a filename to `aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.txt`

Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.12.15-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 2 Akseli Lahtinen 2025-02-27 09:53:57 UTC
Seems it happens only when the window with the filename has not been activated at all. But if it's somehow activated, like even clicked on once, things start working for me.
Comment 3 Bug Janitor Service 2025-02-27 10:08:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/921
Comment 4 Akseli Lahtinen 2025-02-27 12:48:13 UTC
Git commit 99c48acc8ea5e614e447a8f62d92c8d12e9cf58b by Akseli Lahtinen.
Committed on 27/02/2025 at 12:05.
Pushed by akselmo into branch 'master'.

dolphinview: Add widget parameter to elided QToolTip::showText

Without this parameter the QToolTip can not always determine what
is the parent, so it will create a toplevel window in those cases.

Make sure we have dolphinview itself as a widget there, so QToolTip
and thus QtWayland can resolve what is the parent. This
avoids creating random windows when opening a tooltip.

M  +1    -1    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/99c48acc8ea5e614e447a8f62d92c8d12e9cf58b
Comment 5 John Kizer 2025-04-14 04:00:35 UTC
*** Bug 497249 has been marked as a duplicate of this bug. ***
Comment 6 John Kizer 2025-04-14 04:01:43 UTC
*** Bug 502466 has been marked as a duplicate of this bug. ***